Wed Feb 18 04:55:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/field_groups.py: Fix to
	  previous patch (thanks to Pablo, again).

Tue Feb 17 19:21:53 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/unittests/field_groups.py:
	  Another patch from Pablo: this one replaces the old, not very
	  handy, "group" parameter to relevant_data() with a
	  "groupnumbers" parameter, which returns the group number for each
	  bit of returned data.

Tue Feb 17 19:16:00 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/indexerconnection_doctest1.txt: Update doctest to
	  work with previous patch.

Tue Feb 17 19:13:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/errors.py,xappy/indexerconnection.py,
	  xappy/unittests/indexer_errors.py: Another patch from Pablo
	  Hoffman, this time to add a specific error type for reporting
	  that an ID has already been used.

Tue Feb 17 15:31:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,xappy/unittests/field_groups.py: Patch
	  from Pablo Hoffman to return a dictionary of the groups, keyed by
	  group number.

Fri Feb 13 23:17:42 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS,xappy/datastructures.py,xappy/searchconnection.py,
	  xappy/unittests/field_groups.py: Patch and unittest for bug with
	  field groups which contain duplicated data.  Thanks to Pablo
	  Hoffman for the fix and test.

Fri Feb 13 10:31:04 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/distance.py: Extend unittest to cover
	  max_range parameter.

Thu Feb 12 09:37:57 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* external_posting_source/sortdatabase/README: Fix typo.

Wed Feb 11 23:08:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update version of packages to get.
